iterating over statiosn need to work on controller now

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,1 +1,7 @@
 <% @stations.each do |station| %>
+  <%= station.name %>
+  <%= station.distance %>
+  <%= station.fuel_type %>
+  <%= station.address %>
+  <%= station.access-times %>
+<% end %>
